environments/dev/qdrant/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: qdrant-gateway
  namespace: qdrant
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - qdrant.dev.curieo.org
    port:
      name: http
      number: 80
      protocol: HTTP
